--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -26,7 +26,26 @@ services:
       - "traefik.http.routers.{{ app_name }}-{{ env }}.entrypoints=websecure"
       - "traefik.http.routers.{{ app_name }}-{{ env }}.tls.certresolver=letsencrypt"
       - "traefik.http.services.{{ app_name }}-{{ env }}.loadbalancer.server.port={{ app_internal_port }}"
+    depends_on:
+      - db
+
+  db:
+    image: "{{ db_image }}"
+    container_name: "{{ app_name }}-{{ env }}-db"
+    restart: always
+    environment:
+      POSTGRES_USER: "{{ db_user }}"
+      POSTGRES_PASSWORD: "{{ db_password }}"
+      POSTGRES_DB: "{{ db_name }}"
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    networks:
+      - web
 
 networks:
   web:
     external: true
+
+volumes:
+  db_data:
+    name: "{{ app_name }}-{{ env }}-db-data"
