--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -31,7 +31,7 @@ services:
 
   db:
     image: "{{ db_image }}"
-    container_name: "{{ app_name }}-{{ env }}-db"
+    container_name: "{{ db_host }}"
     restart: always
     environment:
       POSTGRES_USER: "{{ db_user }}"
