--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -37,7 +37,7 @@ services:
   migrate:
     image: "{{ app_image }}"
     container_name: "{{ app_name }}-{{ env }}-migrate"
-    command: /app/node_modules/.bin/prisma migrate deploy
+    command: npx prisma@6.19.0 migrate deploy
     environment:
       DATABASE_URL: "{{ DB_URL }}"
       NPM_CONFIG_CACHE: "/tmp/.npm"
