lowercase vars + add additional ones

--- a/templates/.env.j2
+++ b/templates/.env.j2
@@ -13,6 +13,6 @@ ALLOWED_ORIGINS={{ ALLOWED_ORIGINS }}
 DATABASE_URL={{ DB_URL }}
 
 # --- Grafana Loki (falls zutreffend, aus loki-secrets.yml) ---
-LOKI_HOST={{ LOKI_HOST | default('') }}
-LOKI_USERNAME={{ LOKI_USERNAME | default('') }}
-LOKI_API_KEY={{ LOKI_API_KEY | default('') }}
+LOKI_HOST={{ loki_host }}
+LOKI_USERNAME={{ loki_username }}
+LOKI_API_KEY={{ loki_api_key }}
