--- a/templates/.env.j2
+++ b/templates/.env.j2
@@ -10,7 +10,7 @@ LOG_LEVEL={{ LOG_LEVEL }}
 ALLOWED_ORIGINS={{ ALLOWED_ORIGINS }}
 
 # --- Database ---
-DATABASE_URL={{ DB_URL }}
+DATABASE_URL={{ db_url }}
 
 # --- Grafana Loki (falls zutreffend, aus loki-secrets.yml) ---
 LOKI_HOST={{ loki_host }}
