--- a/templates/.env.j2
+++ b/templates/.env.j2
@@ -1,13 +1,13 @@
 # --- Auth ---
-AUTH_GOOGLE_ID={{ AUTH_GOOGLE_ID }}
-AUTH_GOOGLE_SECRET={{ AUTH_GOOGLE_SECRET }}
-AUTH_SECRET={{ AUTH_SECRET }}
+AUTH_GOOGLE_ID={{ auth_google_id }}
+AUTH_GOOGLE_SECRET={{ auth_google_secret }}
+AUTH_SECRET={{ auth_secret }}
 
 # --- App ---
-LOG_LEVEL={{ LOG_LEVEL }}
+LOG_LEVEL={{ log_level }}
 
 # --- API ---
-ALLOWED_ORIGINS={{ ALLOWED_ORIGINS }}
+ALLOWED_ORIGINS={{ allowed_origins }}
 
 # --- Database ---
 DATABASE_URL={{ db_url }}
